--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2018"
 anyhow = "1.0.38"
 itertools = "0.10.0"
 clap = "2.33.3"
-bocs = {path = "../bocs"}
+bocs = { git = "https://github.com/ShaneEverittM/bocs", branch = "main" }
+
